@@ -8,6 +8,7 @@
 	- add/update dependency scripts (Ken Estes).
 	- use directory tokens internally to reduce memory usage.
 	- permit --whatprovides to lookup file dependencies.
+	- fail to package if absolute symlink points within build root.
 
 3.0.2 -> 3.0.3
 	- add --eval to find result of macro expansion.
